new campaign new me

--- a/src/assets/events/000.md
+++ b/src/assets/events/000.md
@@ -1,14 +1,8 @@
-GRADUATION DAY
+The Return to Ngọc Linh
 LONG RIM
-x.yy.50zzu
-https://i.imgur.com/VuaM8xy.png
+8.15.5016u
+https://i.imgur.com/O4QKVI9.jpeg
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat varius quam, ac dictum purus. Curabitur nulla nisi, placerat ut dapibus nec, suscipit quis ligula. Morbi ipsum urna, vulputate id imperdiet rhoncus, lacinia id tortor. Vivamus dignissim consequat nisi, sed lobortis turpis gravida sit amet. Curabitur mattis nisi ut lorem gravida eleifend. Fusce bibendum sed ex quis efficitur. Curabitur mattis orci neque. Integer tortor elit, cursus sit amet mauris eu, cursus blandit magna. Vivamus lacinia vitae purus sagittis tincidunt. Sed tempus neque a sodales eleifend. Nulla vitae ipsum eget nulla sollicitudin porta.
+After successfully locating the artifact, the Smokehawks were intercepted by mercenaries sent by a mysterious individual only known to them as 'R.' Dahlia failed to mention other parties also in search of the object; it is unclear whether or not she was aware of this beforehand but it may be worth following up. Kyin seems ultimately unconcerned as it only stands to follow that they would meet resistance given that Dahlia hired and paid for Lancers specfically. 
 
-Maecenas nec leo arcu. Vestibulum suscipit ipsum ligula, at malesuada massa convallis ut. Proin aliquam mattis felis, ac ultricies felis varius vitae. Pellentesque luctus pellentesque venenatis. Fusce placerat efficitur mi, in ultricies orci aliquam condimentum. Phasellus ac ex rutrum, fermentum libero id, scelerisque diam. Etiam ultricies mattis mauris, sit amet viverra risus sagittis et. Duis id tincidunt justo.
-
-Aliquam et malesuada orci, id sollicitudin leo. In dolor nibh, euismod a arcu in, bibendum venenatis augue. Duis aliquam, nisi at accumsan ultrices, justo ligula pretium turpis, at pulvinar est sapien ac risus. Vestibulum scelerisque imperdiet diam eu placerat. Nam elementum, ligula sed cursus porta, turpis odio finibus libero, sed congue nisl risus non ex. Proin ornare pulvinar est, vitae pellentesque dui congue id. Sed pharetra nibh lacinia libero gravida congue.
-
-Praesent feugiat nisl a eleifend cursus. Aliquam at nulla libero. Duis ornare tincidunt tortor ac laoreet. Sed metus elit, blandit non nibh sed, faucibus lacinia ligula. Ut egestas tristique sodales. In id pretium ante. Mauris egestas viverra turpis eu lobortis. Aenean non lectus nulla. Maecenas laoreet et elit in lacinia. Integer semper urna eu neque sodales volutpat quis in elit. Sed ligula velit, suscipit et ante eget, pretium dictum neque. Praesent in faucibus eros. Ut eu nisl tellus. Aenean metus libero, bibendum at magna vel, luctus luctus arcu. Donec justo ipsum, maximus ac dolor eu, viverra viverra velit. Donec dictum elit eu hendrerit feugiat.
-
-Curabitur fringilla odio et diam pulvinar sodales. Maecenas luctus, lectus nec mollis fermentum, eros sem ultrices nisi, et molestie neque lacus at mi. Duis vel ex diam. Etiam vel elit mattis, fringilla eros sollicitudin, fringilla tortor. Maecenas mi tortor, scelerisque vitae enim vitae, convallis malesuada mauris. Proin eu dapibus erat, sed condimentum felis. Nunc commodo, metus quis convallis venenatis, enim enim volutpat risus, a venenatis diam justo sit amet dui. Morbi varius libero lacus, non sodales nibh mollis sit amet. Suspendisse potenti. Pellentesque velit nibh, tristique id ullamcorper quis, eleifend id libero. Donec quam nunc, varius in tincidunt id, accumsan sit amet odio. Aliquam vehicula tortor sem, ut sagittis elit convallis non. Donec sollicitudin ut tortor eget lacinia. Morbi quis convallis massa. Morbi ultrices augue augue, eget pretium ipsum porttitor vitae. 
+The artifact itself is an amporphous object encased in a black metal fullerene. Its surface is an ever-shifting ferrofluid-like shape of dark light. Flecks of white streak across its surface reminiscent of shooting stars. It radiates a gentle heat not unlike a stone warmed beneath the sun. FOREVER attempted to interface with the object and discovered that while it doesn't react to biological stimuli, it does exhibit mild reaction to the technological.
