--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -1,25 +1,23 @@
 001
-catfish
+Interest of the Voladores
 start
 
 # Mission // #001
 
-## Catfish
+## Interest of the Voladores
 
-*“Life is full of surprises, some good, some not so good...”*  
+*“It is imperative that this artifact returns to its rightful home.”*  
 
 
 # Goals
 
-- Locate the ship of a lieutenant from the Vector dogs.
-- Acquire the hash-id of the ship.
-- Storm the compound of the Vector Dogs.
+- Locate and retrieve the missing artifact
+- Return to Ngọc Linh
 
 # Stakes
 
-- Information about the greasy-haired man's motives and whereabouts
-- Reputation amongst the higher ups at DIADEM
+- Establish reputation with Voladores
 
 ---
 
-> Space Station DIADEM 01 is wholly owned by DIADEM CORP. Work contracts are commonly passed along to the VECTOR DOGS, a pirate faction to do the will of DIADEM CORP. The location of the VECTOR DOG's compound is not known to the public. Using whatever means necessary, find their compound, raid it, and inside find key details related to the man that ended your upstart careers with MIRRORSMOKE.
+> While los Voladores maintain a large trade ship in the Long Rim, Dahlia insists upon doing business aboard the Ngọc Linh. Not entirely unusual, as los Voladores are known to scour the galaxy for pre-Fall relics, but strange to do business so close to *The Bajamesa* but not within its walls.
